packages/evershop/src/components/admin/NavigationItemGroup.scss
.nav-item {
  // Open, close transition
  &.closed {
    // Close transition
    // Hide the children
    .item-group {
      display: none;
    }
  }
  .item-group {
    .nav-item {
      > a {
        padding-left: 1.25rem;
      }
    }
  }
}
.root-label {
  span:first-child {
    padding-right: 10px;
  }
}
.root-nav-item {
  &:last-child {
    position: fixed;
    bottom: 0px;
    left: 0px;
    width: 200px;
    background-color: #fff;
    padding-bottom: 1.25rem;
    padding-top: 1rem;
  }
}

